--- a/index.html
+++ b/index.html
@@ -205,14 +205,26 @@
                         </div>
 
                         <div class="timeline">
+                          <!-- Experience 0 -->
+                          <div class="timeline-item">
+                            <h4 class="item-title">Lead Software Developer</h4>
+                            <span class="item-period">2025 - Current</span>
+                            <span class="item-small">MyAsk.IO</span>
+                            <br/>
+                            <p class="item-description">
+                              <strong>MyAsk.IO</strong> is an artifical intelligent software-as-a-service platform geared at helping developers of all strengths massively streamline their programming workflow. <strong>MyAsk.IO</strong> consists of a web application front-end as well as companion command-line tools in both Ruby and Javascript; both open-source.
+                            </p>
+                          </div>
+                          <!-- / Experience 0 -->
+
                           <!-- Experience 1 -->
                           <div class="timeline-item">
                             <h4 class="item-title">CEO & Founder</h4>
-                            <span class="item-period">2017 - Current</span>
+                            <span class="item-period">2017 - 2025</span>
                             <span class="item-small">Boone Development</span>
                             <br/>
                             <p class="item-description">
-                              <strong>Boone Development</strong> is a boutique development firm that specializes in utilizing cutting edge open-source technologies such as Ruby on Rails and OCLIF. By remaining apprised with the ever changing landscape of open source code, <strong>Boone Development</strong> is able to create highly scalable applications through the proof-of-concept stage to production grade deployments in lightning speed that exceed all client level requirements.
+                              <strong>Boone Development</strong> is a boutique development firm that specializes in utilizing cutting edge open-source technologies such as Ruby on Rails and OCLIF. <strong>Boone Development</strong> is able to create highly scalable applications through the proof-of-concept stage to production grade deployments in lightning speed that exceed all client level requirements.
                             </p>
                           </div>
                           <!-- / Experience 1 -->
@@ -224,8 +236,7 @@
                             <span class="item-small">0rigin, LLC</span>
                             <br/>
                             <p class="item-description">
-                              0rigin is a blockchain based company that specializes in maintaining DeFi applications on EOSIO based networks. 0rigin created and launched the UX Network blockchain with a focus on B2B and predictable network resource management.<br/><br/>
-                              While working at 0rigin, I have helped build custom software to support the company's various blockchain related services and protocols. My tasks have included creating command line tools, Electron based applications, and EOSIO based smart contracts.
+                              0rigin is a blockchain based company that specializes in maintaining DeFi applications on EOSIO based networks. 0rigin created and launched the UX Network blockchain with a focus on B2B and predictable network resource management.
                             </p>
                           </div>
                           <!-- / Experience 2 -->
